# ninja

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_en.md  README_zh.md  build.sh  build_cross.sh  build_docker.sh  build_linux_x86.sh  cross-build.sh  docker-compose.yml  opengpt-serve.toml  patches.sh  render.yaml  serve.toml
.github/: FUNDING.yml  dependabot.yml
crates/self_update/: Cargo.toml
crates/self_update/src/backends/: github.rs  mod.rs
doc/: readme.md  (+3 more)
docker/warp/: Cargo.toml  Dockerfile  boot.sh
docker/warp/src/: main.rs
fficall/: Cargo.toml  build.rs  build.sh
fficall/ffi/: .gitignore  Dockerfile  fficall.h  go.mod  go.sum  main.go
fficall/src/: ffi.rs  lib.rs  model.rs
mitm/: Cargo.toml
mitm/src/: cagen.rs  lib.rs
mitm/src/proxy/: http_client.rs
openai/: Cargo.toml  build.rs
openai/src/: arkose_token.rs  auth.rs  balancer.rs  client.rs  constant.rs  context.rs  dns.rs  error.rs  homedir.rs  lib.rs  log.rs  model.rs  oauth.rs  proxy.rs  serve.rs  token.rs  unescape.rs  urldecoding.rs  uuid.rs
openai/src/api/: chatgpt.rs  mod.rs  opengpt.rs
openai/src/api/models/: mod.rs  req.rs  resp.rs
openai/src/api/opengpt/: mod.rs
openai/src/api/opengpt/models/: mod.rs  req.rs  resp.rs
openai/src/api/platform/v1/: api.rs
openai/src/api/platform/v1/endpoints/: audio.rs  chat.rs  completions.rs  edits.rs  embeddings.rs  files.rs  fine_tunes.rs  images.rs  models.rs  moderations.rs
openai/src/api/platform/v1/resources/: audio.rs  chat_completion.rs  chat_completion_stream.rs  completion.rs  edit.rs  fine_tune.rs  image.rs
openai/src/arkose/: crypto.rs  error.rs  har.rs  mod.rs
openai/src/arkose/funcaptcha/: api_breaker.rs  breaker.rs  mod.rs  model.rs  solver.rs  yescaptcha.rs
openai/src/arkose/har/: mod.rs
openai/src/auth/: error.rs  mod.rs  model.rs
openai/src/auth/provide/: apple.rs  mod.rs  platform.rs  web.rs
openai/src/chatgpt/: api.rs  chat.rs  ios.rs  mod.rs  model.rs
openai/src/chatgpt/model/: mod.rs  req.rs  resp.rs
openai/src/chatgpt/models/: req.rs  resp.rs
openai/src/context/: args.rs  har.rs  mod.rs  preauth.rs
openai/src/dns/: fast.rs
openai/src/eventsource/: error.rs  event_source.rs  reqwest_ext.rs  retry.rs
openai/src/opengpt/: mod.rs
openai/src/opengpt/models/: resp.rs
openai/src/platform/: mod.rs
openai/src/platform/v1/endpoints/: audio.rs  chat.rs  completions.rs  edits.rs  embeddings.rs  files.rs  fine_tunes.rs  images.rs  moderations.rs
openai/src/platform/v1/resources/: chat_completion_stream.rs  edit.rs  fine_tune.rs  image.rs  mod.rs
openai/src/preauth/: cagen.rs  mod.rs
openai/src/preauth/proxy/: ca.rs  error.rs  http_client.rs  mitm.rs  mod.rs
openai/src/serve/: context.rs  convert.rs  env.rs  err.rs  error.rs  extract.rs  load_balancer.rs  middleware.rs  mod.rs  preauth.rs  puid.rs  req.rs  resp.rs  sign.rs  signal.rs  template.rs  tokenbucket.rs  turnstile.rs  ui.rs
openai/src/serve/middleware/: auth.rs  csrf.rs  mod.rs  tokenbucket.rs  whitelist.rs
openai/src/serve/preauth/: cagen.rs  mod.rs
openai/src/serve/preauth/proxy/: error.rs  http_client.rs  mitm.rs  mod.rs
openai/src/serve/proxy/: ext.rs  mod.rs  req.rs  resp.rs
openai/src/serve/proxy/toapi/: mod.rs  stream.rs
openai/src/serve/route/: arkose.rs  files.rs  mod.rs  ui.rs
openai/src/serve/route/har/: mod.rs  token.rs
openai/src/serve/route/toapi/: mod.rs
openai/src/serve/route/ui/: cookier.rs  extract.rs  mod.rs
openai/src/serve/router/: arkose.rs  har.rs  mod.rs  ui.rs
openai/src/serve/router/chat_to_api/: mod.rs  req.rs
openai/src/serve/router/har/: mod.rs  token.rs
openai/src/serve/router/toapi/: mod.rs  resp.rs
openai/src/token/: mod.rs  model.rs
openai/templates/: 404.htm  404.html  auth.htm  auth0.html  chat.htm  chat.html  detail.htm  detail.html  login.htm  login.html  share.htm  share.html
openai/templates/static/: corporate-ui-dashboard.css  manifest.json  service-worker.js
openai/templates/static/_next/static/chunks/: 496-a3bbd8997fe0f8e4.js  709-74a24b5cf35d07f9.js  734-99309a157861fd84.js  webpack-c08a82b5c21eeb39.js
openai/templates/static/_next/static/cx416mT2Lb0ZTj5FxFg1l/: buildManifest1.js
openai/ui/: 404.htm  auth.htm  chat.htm  detail.htm  login.htm  share.htm
openai/ui/har/: error.html  success.html  upload.html
openai/ui/static/: service-worker.js
openai/ui/static/_next/static/8TObkIccovI1-nluVgBpN/: _buildManifest.js
openai/ui/static/_next/static/QrTcOt7XatF0UtTGkJiqj/: _buildManifest.js
openai/ui/static/_next/static/XmKrBoPpskgF_4RiIX1jm/: _buildManifest.js
openai/ui/static/_next/static/chunks/: 012ff928-bcfa62e3ac82441c.js  1564-4aba9bd4a62953e4.js  1724.458548774e7e9538.js  1836-f36c6a4e1cb31680.js  190-d7cd0733e02de5ff.js  1f110208-cda4026aba1898fb.js  238-882950710bdd3e1e.js  2382-e8f6e75519e5d811.js  2802bd5f-15923fb46be55b45.js  3389-9da26f1e0f0823a9.js  3a34cc27-8dc6bbd1d3306d52.js  401-422aac07f756c1be.js  412-900be3dfb2466166.js  412-d7b7161e288bfc24.js  4930-1844554e2ad7a416.js  5342-355a5debcf5275e5.js  5629.6b0a26c1b914cba9.js  564-f0043ba04d4fcd3d.js  6110-b2634f2f3f8ab35c.js  6238-b91c49fd138c8d50.js  6493-f95fb76654babf4a.js  667-a012e14bddf7fc0b.js  7053-9e7da0fb31b983dd.js  753-dd39befb4785e26d.js  7638-b75c3ed66fbe3e25.js  7851-1ada54827998db22.js  7851-f028dc8368e400ff.js  8873-bb9dc83ce1bf199a.js  9087.b77ca50392243b26.js  9271.5e44d7888ace4397.js  937-36e251f389e9e752.js  984-1278472924e49180.js  bd26816a-7ae54dd3357d90b4.js  webpack-3b6f179cb52163b3.js  webpack-ebbb6fe12690a0cf.js
openai/ui/static/_next/static/css/: 2639acab19a371b1.css  c8a4ec226dd6b8e1.css  cc36b64ec67404c4.css  d284afc6128f900f.css
openai/ui/static/_next/static/oDTsXIohP85MnLZj7TlaB/: buildManifest.js
openai/ui/static/_next/static/tLfeYLzFNDDz-YFDI_84l/: _buildManifest.js
openai/ui/static/arkose/fc/api/: sri
openai/ui/static/arkose/v2/1.5.4/: enforcement.cd12da708fe6cbe6e068918c38de2ad9.html
openai/ui/static/arkose/v2/35536E1E-65B4-4D96-9D97-6ADB7EFF8147/: api.js  settings
openai/ui/static/resources/: manifest.json  service-worker.js
(+313 files in other folders)
