[package]
name = "ninja"
version = "0.7.0"
edition = "2021"
description = "Reverse engineered ChatGPT proxy"
license = "MIT"
homepage = "https://github.com/gngpp/ninja"
repository = "https://github.com/gngpp/ninja.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive", "env"] }
serde = {version = "1.0.188", features = ["derive"] }
openai = { path = "openai" }
cidr = "0.2.2"
toml = "0.8.0"
url = "2.4.1"

tokio = { version = "1.32.0", default-features = false, features = ["rt"], optional = true }
serde_json = { version = "1.0.107", optional = true }
inquire = { version = "0.6.2", optional =  true }
colored_json = { version = "3.2.0", optional = true }
indicatif = { version = "0.17.6", optional = true }
json_to_table = { version = "0.6.0", optional = true }
tabled = { version = "0.12.2", optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["signal", "user", "ptrace"]}

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.5.4"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_env = "musl"))'.dependencies]
tikv-jemallocator = "0.5.4"

[dev-dependencies]
futures-util = "0.3.28"
tokio = { version = "1.32.0", default-features = false, features = ["rt"] }
reqwest = { package = "reqwest-impersonate", version ="0.11.27", default-features = false, features = [
    "boring-tls", "impersonate","json", "cookies", "stream", "multipart", "socks", "blocking"
] }
base64 = "0.21.4"
viuer = "0.6.2"
hex = "0.4.3"
sha2 = "0.10.8"

[features]
default = ["serve"]
terminal = [
    "dep:tokio", 
    "dep:serde_json", 
    "dep:inquire", 
    "dep:colored_json", 
    "dep:indicatif",
    "dep:json_to_table",
    "dep:tabled"
    ]
serve = ["limit"]
limit = ["openai/limit", "openai/serve"]

[[bin]]
name = "ninja"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "gngpp <gngppz@gmail.com>"
copyright = "2023, gngpp <gngppz@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Reverse engineered ChatGPT proxy (bypass Cloudflare 403 Access Denied)"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ninja", "usr/bin/ninja", "755"],
    ["README.md", "usr/share/doc/ninja/README", "644"],
]