[package]
name = "fficall"
version = "0.1.0"
edition = "2021"
description = "A Golang FFI TLS Client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0"
serde_json = "1.0.81"
serde = {version = "1.0", features = ["derive"] }
derive_builder = "0.12.0"

[build-dependencies]
bindgen = "0.65.1"

[lib]
name = "fficall"
path = "src/lib.rs"

[profile.dev]
opt-level = 'z'

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true
