[package]
name = "openai"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
anyhow = "1.0.71"
thiserror = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { git = "https://github.com/gngpp/reqwest.git", branch ="main", default-features = false, features = [
    "boring-tls", "impersonate","json", "cookies", "stream", "multipart", "socks"
] }
tokio = { version = "1.28.2", features = ["fs", "sync"] }
serde_json = "1.0.81"
serde = {version = "1.0.164", features = ["derive"] }
regex = "1.8.2"
async-recursion = "1.0.4"
url = "2.3.1"
base64 = "0.21.2"
rand = "0.8.5"
async-trait = "0.1.68"
derive_builder = "0.12.0"
jsonwebtokens = "1"
sha2 = "0.10.6"
hmac = { version = "0.12.1", optional = true }
futures-core = { version = "0.3.5", optional = true}
tera = { version = "1.19.0", default-features = false, optional = true }

# redis limit
redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async"], optional = true }
redis-macros = { version = "0.2.1", optional = true }

# stream
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
eventsource-stream = { version = "0.2.3", optional = true }
pin-project-lite = { version = "0.2.8", optional = true }
nom = { version = "7.1.0", optional = true }
mime = { version = "0.3.16", optional = true }
futures-timer = { version = "3.0.2", optional = true }

# arkose
aes = "0.8.2"
md5 = "0.7.0"
cbc = "0.1.2"

# axum
axum = { version = "0.6.19", features = ["http2"], optional = true }
axum-extra ={ version = "0.7.5", features = ["cookie"], optional = true }
axum-server = { version = "0.5.1", default-features = false, features = ["tls-rustls"], optional = true }
tower-http = { version = "0.4.3", default-features = false, features = ["cors", "trace"], optional = true }
tower = { version = "0.4.13", default-features = false, features = ["limit", "timeout"], optional = true}
bytes = { version = "1.4.0", optional = true }
time = { version =  "0.3.23", optional = true }
static-files = { version = "0.2.3", optional = true }

[build-dependencies]
static-files = "0.2.3"

[features]
default = ["serve", "limit", "sign", "opengpt", "platform", "stream", "template"]
serve = ["dep:tower-http", "dep:tower", "dep:bytes", "dep:time", "dep:axum-server", "dep:axum-extra", "dep:axum", "dep:static-files", "dep:futures-core", "dep:tera"]
opengpt = []
platform = ["dep:tokio-util"]
stream = ["dep:futures", "dep:tokio-stream", "dep:eventsource-stream", "dep:futures-core", "dep:pin-project-lite", "dep:nom", "dep:mime", "dep:futures-timer"]
remote-token = []
limit = ["dep:redis", "dep:redis-macros"]
sign = ["hmac"]
template = []

[lib]
name = "openai"
path = "src/lib.rs"

[profile.dev]
opt-level = 'z'

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true
