[package]
name = "self_update"
version = "0.39.0"
description = "Self updates for standalone executables"
edition = "2018"
rust = "1.64"

[dependencies]
serde_json = "1.0.108"
tempfile = "3.8.1"
flate2 = { version = "1.0.28", optional = true }
tar = { version = "0.4.40", optional = true }
semver = "1.0.20"
zip = { version = "0.6.6", default-features = false, features = ["time"], optional = true }
either = { version = "1.9.0", optional = true }
reqwest = { package = "reqwest-impersonate", version = "0.11.46", default-features = false, features = ["impersonate", "blocking", "json"] }
indicatif = "0.17.7"
quick-xml = "0.31.0"
regex = "1.10.2"
log = "0.4.20"
urlencoding = "2.1.3"
self-replace = "1.3.7"
zipsign-api = { version = "0.1.1", default-features = false, optional = true }

[features]
default = []
archive-zip = ["zip", "zipsign-api?/verify-zip"]
compression-zip-bzip2 = ["archive-zip", "zip/bzip2"]
compression-zip-deflate = ["archive-zip", "zip/deflate"]
archive-tar = ["tar", "zipsign-api?/verify-tar"]
compression-flate2 = ["archive-tar", "flate2", "either"]
signatures = ["dep:zipsign-api"]

