[package]
name = "tcpfw"
version = "0.1.0"
edition = "2021"
description = "TCP forward"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "io-util", "net"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true